--- a/provisioning/vars.yml
+++ b/provisioning/vars.yml
@@ -4,3 +4,4 @@ drupal_core_version: "8.3.x"
 drupal_core_path: "/var/www/drupal-{{ drupal_core_version }}-dev"
 domain: "drupaltest"
 drupal_site_name: "Drupal Test"
+mysql_pass: "1234"
