--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -7,138 +7,15 @@
     - vars.yml
 
   pre_tasks:
-    
-    - name: Install python for Ansible
-      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-      register: output
-      changed_when: output.stdout != ""
-    
-    - name: Update apt cache
-      apt: update_cache=yes cache_valid_time=3600
+    - include: tasks/pre.yml
 
   handlers:
-    - name: restart apache
-      service: name=apache2 state=restarted
+    - include: handlers/handlers.yml
 
   tasks:
-    - name: Install software apt
-      apt: "name={{ item }} state=present"
-      with_items:
-        - python-apt
-        - python-pycurl
-
-    - name: Add repository for PHP
-      apt_repository: repo='ppa:ondrej/php' update_cache=yes
-
-    - name: Install Apache-MySQL-PHP and dependencies
-      apt: "name={{ item }} state=present" 
-      with_items:
-        - apache2
-        - php7.1-common
-        - php7.1-cli
-        - php7.1-dev
-        - php7.1-gd
-        - php7.1-curl
-        - php7.1-json
-        - php7.1-opcache
-        - php7.1-xml
-        - php7.1-mbstring
-        - php7.1-pdo
-        - php7.1-mysql
-        - php-apcu
-        - libpcre3-dev
-        - libapache2-mod-php7.1
-        - python-mysqldb
-        - mysql-server
-    
-    - name: Disable firewall (dev only)
-      service: name=ufw state=stopped
-
-    - name: Start Services
-      service: "name={{ item }} state=started enabled=yes"
-      with_items:
-        - apache2
-        - mysql
-
-    - name: Enable Apache rewrite module
-      apache2_module: name=rewrite state=present
-      notify: restart apache
-
-    - name: Add Apache virtualhost
-      template:
-        src: "templates/drupal.dev.conf.j2"
-        dest: "/etc/apache2/sites-available/{{ domain }}.dev.conf"
-        owner: root
-        group: root
-        mode: 0644
-      notify: restart apache
-
-    - name: Symbolic link Drupal virtualhost
-      file:
-        src: "/etc/apache2/sites-available/{{ domain }}.dev.conf"
-        dest: "/etc/apache2/sites-enabled/{{ domain }}.dev.conf"
-        state: link
-      notify: restart apache
-
-    - name: Remove default virtualhost
-      file:
-        path: "/etc/apache2/sites-enabled/000-default"
-        state: absent
-      notify: restart apache
-
-    - name: Adjust OpCache Mem
-      lineinfile:
-        dest: "/etc/php/7.1/apache2/conf.d/10-opcache.ini"
-        regexp: "^opcache.memory_consumption"
-        line: "opcache.memory_consumption = 96"
-        state: present
-      notify: restart apache
-
-    - name: Remove the mysql test database
-      mysql_db: db=test state=absent
-
-    - name: Create mysql database
-      mysql_db: "db={{ domain }} state=present" 
-
-    - name: Create a mysql user for Drupal
-      mysql_user:
-        name: "{{ domain }}"
-        password: "{{ mysql_pass }}"
-        priv: "{{ domain }}.*:ALL"
-        host: localhost
-        state: present
-    
-    - name: Download composer
-      get_url:
-        url: https://getcomposer.org/installer
-        dest: /tmp/composer-installer.php
-        mode: 0755
-
-    - name: Run composer
-      command: >
-        php composer-installer.php
-        chdir=/tmp
-        creates=/usr/local/bin/composer
-
-    - name: Move compose
-      shell: >
-        mv /tmp/composer.phar /usr/local/bin/composer
-        creates=/usr/local/bin/composer
-    
-    - name: Check out drush 8.x branch
-      git:
-        repo: https://github.com/drush-ops/drush.git
-        version: 8.x
-        dest: /opt/drush
-
-    - name: Install Drush dependencies
-      shell: >
-        /usr/local/bin/composer install
-        chdir=/opt/drush
-        creates=/opt/drush/vendor/autoload.php
-
-    - name: Create drush bin symbolic link
-      file:
-        src: /opt/drush/drush
-        dest: /usr/local/bin/drush
-        state: link
+    - include: tasks/commom.yml
+    - include: tasks/apache.yml
+    - include: tasks/mysql.yml
+    - include: tasks/composer.yml
+    - include: tasks/drush.yml
+    - include: tasks/drupal.yml
